@@ -1769,8 +1769,7 @@ public class CRD {
                                getTime().
                                getSecondsInLocalDay();
 
-            final String str = String.format(
-                    "%18.12f %1d %4s %8s %8s %8.4f %10.1f %8.1f %6.1f %7.3f %7.3f %6.1f %1d %1d %1d %1d %5.1f",
+            final String str = "%18.12f %1d %4s %8s %8s %8.4f %10.1f %8.1f %6.1f %7.3f %7.3f %6.1f %1d %1d %1d %1d %5.1f".formatted(
                     sod, typeOfData, systemConfigurationId,
                     formatIntegerOrNaN(numberOfPointsRecorded, -1),
                     formatIntegerOrNaN(numberOfPointsUsed, -1), oneWayDistance,
