@@ -23,7 +23,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -271,7 +270,7 @@ public class PseudoRangeFilteringTest {
 
         final ArrayList<Double> valueArray = new ArrayList<>();
         int cpt = 0;
-        Path pathToFile = Paths.get(fileName);
+        Path pathToFile = Path.of(fileName);
 
         try (BufferedReader br = Files.newBufferedReader(pathToFile, StandardCharsets.UTF_8)) {
             String line = br.readLine();
